[package]
name = "filecrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic-crypt = "3.1.12"
serde_json = "1.0.104"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "filecrypt"
path = "src/bin/main.rs"
